--- a/.circleci/shared/executors.yml
+++ b/.circleci/shared/executors.yml
@@ -4,3 +4,8 @@ executors:
     docker:
       - image: cimg/base:2025.07-24.04
     resource_class: small
+
+  shared__clojure:
+    docker:
+      - image: cimg/clojure:1.12-openjdk-21.0-browsers
+    resource_class: medium
