Add two polylith projects deployed as Ions
a) ions-compute to be deployed to the primary compute group
b) ions-graphql-api to be deployed to a query group

--- a/clojure/.circleci/config.yml
+++ b/clojure/.circleci/config.yml
@@ -56,7 +56,7 @@ workflows:
           name: clojure__polylith-test-project__<<matrix.project>>
           matrix:
             parameters:
-              project: [dev]
+              project: [ions-compute, ions-graphql-api]
           requires:
             - clojure__clj-lint__clj-kondo .
             - clojure__clj-lint__cljfmt/check
